unpackaged/main/default/objects/Expense__c/fields/Billable_Expense__c.field-meta.xml
<CustomField>
    <fullName>Billable_Expense__c</fullName>
    <label>Billable/Expense</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>