unpackaged/main/default/objects/Expense__c/fields/Chargeback_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Credit_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargeback Credit Card</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>