unpackaged/main/default/objects/Expense__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses (Client)</relationshipLabel>
    <relationshipName>Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>