unpackaged/main/default/objects/Expense__c/fields/Grease_Facetime_Trial__c.field-meta.xml
<CustomField>
    <fullName>Grease_Facetime_Trial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grease/Facetime/Trial</label>
    <referenceTo>Grease__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>