unpackaged/main/default/objects/Expense__c/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Invoice Description</label>
    <length>254</length>
    <type>Text</type>
</CustomField>