unpackaged/main/default/objects/Expense__c/fields/Logbook__c.field-meta.xml
<CustomField>
    <fullName>Logbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logbook</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Additional Costs</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>